Closed Bug 1481373 Opened 6 years ago Closed 6 years ago

Work around clang miscompilation of a non-virtual thunk to HttpChannelChild::AsyncCall on x86

Categories

(Core :: Networking: HTTP, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla63
Tracking Status
firefox63 --- fixed

People

(Reporter: glandium, Assigned: glandium)

References

Details

Attachments

(1 file)

Attached patch PatchSplinter Review
Attachment #8998099 - Flags: review?(valentin.gosu)
Attachment #8998099 - Flags: review?(valentin.gosu) → review+
Pushed by mh@glandium.org:
https://hg.mozilla.org/integration/mozilla-inbound/rev/7aba7c6d8dba
Work around clang miscompilation of a non-virtual thunk to HttpChannelChild::AsyncCall on x86. r=valentin
https://hg.mozilla.org/mozilla-central/rev/7aba7c6d8dba
Status: NEW → RESOLVED
Closed: 6 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla63
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: